# Dear-Michaels-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TryTryAgain.sln
Assets/Models/mario/: mario-tex.mtl
Assets/Scenes/: playerDemo.mscene  test.mscene
Assets/Shaders/: Framebuffer.glsl  Lit.glsl  Sprite.glsl
Resources/Icons-gimp/: obj.xcf
TryTryAgain/: Application.h  TryTryAgain.vcxproj  TryTryAgain.vcxproj.filters  cpp.hint  imgui.ini
TryTryAgain/Assets/Models/cube/: cube.blend  cube.blend1  cube.mtl
TryTryAgain/Assets/Scenes/: NewScene.json  Showcase.json  TestScene.json  playerDemo.mscene  test.mscene
TryTryAgain/Assets/Shaders/: Gizmo.frag  Gizmo.glsl  Gizmo.vert  LoadModel.frag  LoadModel.glsl  Picking.frag  Picking.glsl  Picking.vert  Skybox.glsl  Standard.frag  Standard.vert
TryTryAgain/Resources/Icons-gimp/: glsl.xcf  mscene.xcf
TryTryAgain/Source/: Engine.cpp  Engine.h  Main.cpp
TryTryAgain/Source/Actors/: AActor.cpp  AActor.h  AAwesomeBox.cpp  AAwesomeBox.h
TryTryAgain/Source/Components/: UComponent.cpp  UComponent.h  UPlayerControlComponent.cpp  UPlayerControlComponent.h  UStaticMeshComponent.cpp  UStaticMeshComponent.h  UStaticModelComponent.cpp  UStaticModelComponent.h
TryTryAgain/Source/Elements/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp
TryTryAgain/Source/Input/: Input.cpp
TryTryAgain/Source/Modules/Editor/: EditorModule.h
TryTryAgain/Source/Modules/Render/: GL_RenderModule.cpp  GL_RenderModule.h
TryTryAgain/Source/Modules/Window/: SDL_GL_WindowModule.cpp  SDL_GL_WindowModule.h
TryTryAgain/Source/Objects/: UObject.cpp  UObject.h  UTestObject.cpp  UTestObject.h  UTestTestObject.cpp  UTestTestObject.h  UTransformGizmo.cpp  UTransformGizmo.h
TryTryAgain/Source/Panels/: Console.cpp  Console.h  ContentBrowser.cpp  ContentBrowser.h  GameWindow.cpp  GameWindow.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h
TryTryAgain/Source/ResourceManagement/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderPeek.cpp  ShaderPeek.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
TryTryAgain/Source/Serialization/: CerealGLM.h  ComponentFactory.cpp  ComponentFactory.h
TryTryAgain/Source/Structs/: FString.h  FTransform.h
TryTryAgain/Source/Utility/: Utility.h
TryTryAgain/Source/Window/: Window.cpp  Window.h
src/: Application.cpp  EngineAssert.h  Main.cpp
src/Components/: UComponent.h  UStaticModelComponent.cpp
src/Elements/: Camera.cpp  Camera.h  Game.cpp
src/Input/: Input.cpp  Input.h
src/Modules/Editor/: EditorModule.cpp  EditorModule.h  EditorStyles.h  IEditor.h
src/Modules/Render/: GL_RenderModule.cpp  GL_RenderModule.h
src/Modules/Window/: SDL_GL_WindowModule.cpp  SDL_GL_WindowModule.h
src/Objects/: UObject.h
src/Panels/: Console.cpp  ContentBrowser.h  GameWindow.cpp  GameWindow.h  Hierarchy.cpp  Hierarchy.h  IPanel.h  Inspector.cpp
src/ResourceManagement/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Skybox.cpp  Texture.cpp  Texture.h
src/Scene/: ComponentRegistry.cpp  ComponentRegistry.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/Scene/Editor/: Inspector.cpp  Inspector.h  SceneEditor.cpp  SceneEditor.h
src/Scene/Systems/: Systems.h
src/Serialization/: ComponentFactory.cpp  ComponentFactory.h
src/Structs/: FString.h  FTransform.h
src/Window/: Window.cpp  Window.h
